# backend2023

./: .gitignore  README.md
lab1_modification_lnd/: .coveragerc  README.md  calcnew.py  compf.py  pyproject.toml
lab1_modification_lnd/tests/: test_calcnew.py  test_compf.py  test_stack.py
lab4-inf_django/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
lab4-inf_django/djangoinfire/blog/: models.py  urls.py  views.py
lab4-inf_django/djangoinfire/blog/faker/: posts.py
lab4-inf_django/djangoinfire/blog/fixtures/: posts.json
lab4-inf_django/djangoinfire/blog/migrations/: 0001_initial.py  0002_auto_20231202_1843.py  0003_comment.py  0004_alter_post_text.py  0005_alter_post_text.py
lab4-inf_django/djangoinfire/djangoinfire/: asgi.py  settings.py  urls.py  views.py  wsgi.py
lab4-inf_django/djangoinfire/polls/: admin.py  models.py  tests.py  views.py
lab4-inf_django/djangoinfire/polls/migrations/: 0001_initial.py
lab4-inf_django/djangoinfire/polls/templatetags/: polls_extras.py
lab4-inf_django/djangoinfire/static/styles/: colors.css  landing_style.css  pagination.css  style.css
lab4-inf_django/djangoinfire/templates/: base.html  landing.html
lab4-inf_django/djangoinfire/templates/pagination/: pagination.html
lab4-inf_django/djangoinfire/templates/registration/: login.html
lab666_automarket/: docker-compose.yaml  pyproject.toml
lab666_automarket/dealership/dealership/: asgi.py  settings.py  urls.py  wsgi.py
lab666_automarket/dealership/hellcar/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
lab666_automarket/dealership/hellcar/fixtures/: initial_data.json
lab666_automarket/dealership/hellcar/migrations/: 0001_initial.py  0002_brand_logo.py
lab666_automarket/dealership/hellcar/templates/: add_review.html  brand_detail.html  brand_list.html  car_detail.html  car_list.html  home.html
lab666_automarket/dealership/static/styles/: brand.css  cars_view.css  main.css  review.css  variables.css
lab666_automarket/dealership/templates/: base.html
lab666_automarket/dealership/templates/registration/: logged_out.html
lab6_weather1/: .env.example  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
lab6_weather1/weather_app/static/weather_app/: style.css
lab6_weather1/weather_app/weather/: admin.py  api.py  forms.py  models.py  urls.py  views.py
lab6_weather1/weather_app/weather/migrations/: 0001_initial.py  0002_comment.py
lab6_weather1/weather_app/weather_app/: settings.py  urls.py
lab6_weather2/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
lab6_weather2/main_weather/: manage.py
lab6_weather2/main_weather/app/: admin.py  forms.py  models.py  urls.py  utils.py  views.py
lab6_weather2/main_weather/app/migrations/: 0001_initial.py  0002_subscription.py  0005_observation.py  (+4 more)
lab6_weather2/main_weather/main_weather/: asgi.py  settings.py  wsgi.py
lab6_yayd/: Dockerfile  README.md  docker-compose.yaml  pyproject.toml
lab6_yayd/djangoinfire/: manage.py
lab6_yayd/djangoinfire/djangoinfire/: asgi.py  settings.py  urls.py  wsgi.py
lab6_yayd/djangoinfire/yayd/: admin.py  apps.py  forms.py  models.py  urls.py  views.py
(+51 files in other folders)
