[tool.poetry]
name = "django-lab"
version = "0.0.1"
description = "some suffering during overengeniring casual labs"
authors = ["ThePigeonKing"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11 <3.12"
Django = "^4.2.7"
django-bootstrap5 = "^23.3"
django-debug-toolbar = "^4.2.0"
psycopg2-binary = "^2.9.9"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pudb = "^2023.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88
