[tool.poetry]
name = "automarket-django"
version = "0.0.1"
description = "simple car dealership Django project"
authors = ["ThePigeonKing <thepigeonking@mail.ru>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">3.11 <3.12"
Django = ">=5.0"
psycopg2-binary = "^2.9.9"
django-bootstrap5 = "^23.3"
django-debug-toolbar = "^4.2.0"
Faker = "^20.1.0"
pillow = "^10.1.0"
django-extensions = "^3.2.3"
pygraphviz = "^1.11"

[tool.poetry.group.dev.dependencies]
black = "^23.11.0"
isort = "^5.12.0"
pudb = "^2023.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
include = '\.pyi?$'

[tool.isort]
profile = "black"
line_length = 88