[tool.poetry]
name = "lab6-weather2"
version = "0.1.0"
description = ""
authors = ["faust"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11 <=3.12"
django-bootstrap5 = "^23.4"
django = "^5.0.1"
requests = "^2.31.0"
pillow = "^10.2.0"
psycopg2-binary = "^2.9.9"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
