[tool.poetry]
name = "lab6-yayd"
version = "0.1.0"
description = ""
authors = ["lebedev"]
readme = ""
packages = [{include = "lab6_yayd"}]

[tool.poetry.dependencies]
python = ">=3.11 <=3.12"
django = "^5.0.2"
django-bootstrap5 = "^23.4"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
